--- a/doc/relatorios/backbone-artigo/backbone.tex
+++ b/doc/relatorios/backbone-artigo/backbone.tex
@@ -7,10 +7,10 @@
 \begin{document}
 
 % Algorithms to introduce
-% - EXACT: Branch-and-cut (CPLEX)
+% - EXACT: Boussier 2010 / Branch-and-cut (CPLEX)
 % - DPROG: Bertsimas 2002
 % - PROBL: Dyer 1989
-% - HEURI: (Fleszar 2009?)
+% - HEURI: Fleszar 2009
 %
 % Instances:
 % - OR-Library
@@ -26,8 +26,8 @@
 %   - What happens with their transition phases.
 
 \begin{abstract}
-This article contains a draft...as a backbone for an article over the
-computational investigation of the hardness the Multidimensional Knapsack
+This article contains a backbone for an article over the computational
+investigation of the hardness the Multidimensional Knapsack
 Problem (MKP) as well as the on performance of algorithms for the solution of
 instances.
 \end{abstract}
@@ -59,15 +59,24 @@ Although none of those have exhibit competitive performance compared to
 comercial MIP solvers, at least over the instances existent on literature.
 
 According to literature MKP does not allow a FPTAS (unless $P=NP$).
-
 % Literatura existente (used for metaheuristics testing, methods, 
-%    benchmark data base)
+%    benchmark data base), abordagens existentes...
+
+% Organização das seções:
+%  - Seção 2 : Últimos algoritmos propostos
+%  - Seção 3 :
+%    - comentário sobre instâncias
+%    - criação de instâncias difíceis
+%    - as instâncias existentes e resultados até então.
+%  - Seção 4 : Dúvidas e de pesquisa
 
 \section{Algorithms}
 % - EXACT: Branch-and-cut (CPLEX) / Boussier 2010 \cite{boussier2010multi}
 % - DPROG: Bertsimas 2002 \cite{bertsimas2002approximate}
 % - PROBL: Dyer 1989 \cite{dyer1989probabilistic}
 % - HEURI: Fleszar 2009 \cite{fleszar2009fast}
+%
+% Falar um parágrafo sobre cada um deles
 
 \section{Instances}
 % - OR-Library \cite{Chu-Beasley-1998} (\cite{freville1994efficient})
