--- a/doc/relatorios/backbone-artigo/backbone.tex
+++ b/doc/relatorios/backbone-artigo/backbone.tex
@@ -2,6 +2,7 @@
 
 \usepackage{amsmath}
 
+\title{A computational analysis of the multidimensional knapsack problem: a backbone}
 \author{Marcos Daniel Baroni}
 
 \begin{document}
@@ -25,11 +26,12 @@
 % - Instances from other NP-Complete problems are hard?
 %   - What happens with their transition phases.
 
+\maketitle
+
 \begin{abstract}
-This article contains a backbone for an article over the computational
-investigation of the hardness the Multidimensional Knapsack
-Problem (MKP) as well as the on performance of algorithms for the solution of
-instances.
+This article contains a backbone for an in proceeding article about the
+hardness of the Multidimensional Knapsack Problem and the performance of
+the algorithms existing on literature for its solution.
 \end{abstract}
 
 \section{Introduction}
@@ -46,7 +48,7 @@ instances.
 % Definição do problema e aplicações
 The 0-1 Multidimensional Knapsack Problem (MKP) is a generalization of the Knapsack
 Problem where an item expends more than a single resource type.
-A MKP having $n$ itens and $m$ dimensions can be defined as follows.
+A MKP having $n$ items and $m$ dimensions can be defined as following:
 
 \begin{align*}
   \text{maximize} & \sum_{j=1}^n p_j x_j \\
@@ -59,52 +61,62 @@ selections, cutting stock problems, task scheduling and allocation of processors
 and databases in distributed computer programs.
 The problem is a generalization of the well-known Knapsack Problem (KP) in which
 $ m = 1$.
+Several algorithms like FPTAS and dynamic programming have been developed for
+KP with considerable success.
+However the MKP have shown to be an intractable problem for some relative small
+instances, especially when $m$ grows.
+Indeed little is known about what exactly makes a hard instance.
 
-Several contributions have been made addressing exact, heuristic, approximation
+Several contributions have been made proposing exact, heuristic, approximation
 and probabilistic approaches for the MKP.
 The purpose of the work is to evaluate the performance the main approaches
-presented on literature over different instances of the problem and
-iddentify those instances which are hard to solve by all the approaches.
-
-Section \ref{algs} briefly addresses each one of the main approaches for
-solving MKP, Section \ref{insts} discusses about the instances of MKP used on
-literature and Section \ref{questions} presents some research questions 
-we hope to answer with the article.
+presented on literature over different instances of the problem
+identifying what makes an instance hard to solve for the proposed algorithms.
 
 \section{The main approaches for solving MKP}
 \label{algs}
 Due its simple definition and challenging difficulty, the MKP
 turned a quite addressed problem for experiments with metaheuristics in recent
 years, although few of them have exhibit competitive performance compared to
-comercial MIP solvers (at least for the instances dealed by literature).
+comercial MIP solvers (at least for the instances addressed by literature).
 Among the heuristics reporting competitive performance compared to MIP solvers
-the newest ones are the one proposed by Fleszar and Hindi \cite{fleszar2009fast}
-and one proposed by Hanafi and Wilbaut \cite{hanafi2011improved}.
+the newest are those proposed by Fleszar and Hindi \cite{fleszar2009fast}
+and Hanafi and Wilbaut \cite{hanafi2011improved}.
 
-According to literature MKP does not allow a FPTAS (unless $P=NP$) but a PTAS is
-allowed and one was proposed by Frieze and Clarke \cite{frieze1984approximation}.
-Dyer and Frieze \cite{dyer1989probabilistic} proposed a probabilistic which,
-given a $\epsilon > 0$ answers computes the optimal solution for the problem
-with probability at least $1 - \epsilon$ with polynomial time.
+According to literature MKP does not allow a FPTAS (unless $P=NP$) but a PTAS
+was proposed by Frieze and Clarke \cite{frieze1984approximation} based on the
+used of the dual simplex algorithm for linear programming.
+Dyer and Frieze \cite{dyer1989probabilistic} proposed a probabilistic algorithm
+which, given a $\epsilon > 0$ answers computes the optimal solution for the
+problem with probability at least $1 - \epsilon$ with polynomial time.
 
 At the present moment the most powerful exact method for solving the MKP seems
 to be the multi-level search strategy proposed by Boussier \cite{boussier2010multi}
 which, until now, is the only approach which have found the optimal solution for
-some popular instances with 500 itens and 10 contraints.
+some popular instances with 500 items and 30 contraints.
 
-\section{Instances}
+\section{The instances}
 \label{insts}
 
-The most popular instances for the MKP are those from the OR-LIBRARY
-and they are used as a reference for state-of-art methods.
+The MKP instances from the OR-LIBRARY are the most popular ones and are used
+for performance measurement of state-of-art algorithms.
 The generation of thoses instances are generaly guided by two parameters: the
-tightness $\delta$ of the knapsacks and the profit-weight correlation of the
-items.
+profit-weight {\it correlation} of the items and the {\it tightness ratio}
+$\delta$ of the knapsack.
 
-The tightness of a knapsack rules the relative capacity of the knapsack.
-Given a tightness $\delta \in [0,1]$ the capacity $b_i$ is setted to
-$b_i = \delta \sum_{i=1}^n x_i$.  % STOPPED HERE, talking about the impact of
-% tightness on the hardness of the problem...%
+The profit-weight correlation $\frac{p_j}{\sum^m_{i=1}w_{ij}}$ states how much
+an item contributes for the objective function relative to its weight.
+A high variation on the items correlation tends to procude easier instances, once
+it easier to decide which items are more profitable.
+
+The tightness ratio of a knapsack rules its relative capacity:
+given a tightness ratio $\delta \in [0,1]$ the capacity $b_i$ is setted to
+$b_i = \delta \sum_{i=1}^n x_i$. 
+An extremaly high tightness ratio tends to produce easy instances, once we
+are able to fill the knapsack with most of the items.
+However extremaly low tightness ratios reduces the possibilities of filling the
+knapsack.
+Those facts lead us to expect a {\it transition phase} around $ \delta = 0.5$.
 
 % - OR-Library \cite{Chu-Beasley-1998} (\cite{freville1994efficient})
 % - Uniform[0-1] (Dyer 1989) \cite{dyer1989probabilistic}
@@ -112,17 +124,21 @@ $b_i = \delta \sum_{i=1}^n x_i$.  % STOPPED HERE, talking about the impact of
 % - large dimensions (K.n = m?)
 % - Sparse weights
 
-\section{Research Questions and Expectations}
+\section{Research questions}
 \label{questions}
-% - Which instances are hard/easy for each algorithm?
-%   - Why are they hard?
-% - Which instances are hard for all algorithms?
-%   - Why are they hard for all?
-% - Instances from other NP-Complete problems are hard?
-%   - What happens with their transition phases.
-%
-% (número limitado de restrições o problema é mais fácil)
-% (coeficientes limitados o problema é mais fácil?)
+
+The main objective of the work is to understand what makes a MKP instance hard
+to solve.
+Some questions that may be interesting to answer:
+\begin{itemize}
+  \item{How the hardness of the problem varies against parameters like
+    tightness ratio and item correlation?}
+  \item{How the algorithms for solving MKP performes over instances from
+    others NP-Complete problems?}
+  \item{A MKP instance is hard even with sparce weight matrices?}
+  \item{For what amount of computational effort the heuristics outperforms
+    exact algorithms?}
+\end{itemize}
 
 \bibliographystyle{abbrv}
 \bibliography{../../refs}
