Adicionado uma outra duvida no backbone.

--- a/doc/relatorios/backbone-artigo/backbone.tex
+++ b/doc/relatorios/backbone-artigo/backbone.tex
@@ -138,6 +138,9 @@ Some questions that may be interesting to answer:
   \item{A MKP instance is hard even with sparce weight matrices?}
   \item{For what amount of computational effort the heuristics outperforms
     exact algorithms?}
+  \item{Does the PTAS and probabilistic methods (in practice) offer
+    better warranty than the exact method or the later indeed offers a better
+	warranty on quality which is merely theoretically hard to prove?}
 \end{itemize}
 
 \bibliographystyle{abbrv}
