backbone de avrgcase-ssum.

--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -129,6 +129,28 @@ masid = {2010927}
 		 codes.",
 }
 
+@article{martello1984worst,
+  title={Worst-case analysis of greedy algorithms for the subset-sum problem},
+  author={Martello, Silvano and Toth, Paolo},
+  journal={Mathematical programming},
+  volume={28},
+  number={2},
+  pages={198--205},
+  year={1984},
+  publisher={Springer}
+}
+
+@article{lai1993worst,
+  title={Worst-case analysis of greedy algorithms for the unbounded knapsack, subset-sum and partition problems},
+  author={Lai, Tsung-Chyan},
+  journal={Operations research letters},
+  volume={14},
+  number={4},
+  pages={215--220},
+  year={1993},
+  publisher={Elsevier}
+}
+
 @article{Balas-1965,
 author = {E. Balas},
 title = {{An Additive Algorithm for Solving Linear Programs with Zero-One Variables}},
@@ -551,3 +573,14 @@ masid = {694811}
   publisher={Springer}
 }
 
+
+@article{datri1982probabilistic,
+  title={Probabilistic analysis of the subset-sum problem},
+  author={D'Atri, Gianfranco and Puech, Claude},
+  journal={Discrete Applied Mathematics},
+  volume={4},
+  number={4},
+  pages={329--334},
+  year={1982},
+  publisher={Elsevier}
+}
