Versão do bakckbone sobre SNBPPs.

--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -477,7 +477,7 @@ year = {2001},
 masid = {2057574}
 }
 
-@book{Garey1979,
+@book{garey1979,
 author = {Michael Randolph Garey and David S. Johnson},
 title = {{Computers and Intractability: A Guide to the Theory of NP-Completeness}},
 booktitle = {Artificial Evolution},
@@ -582,5 +582,98 @@ masid = {694811}
   number={4},
   pages={329--334},
   year={1982},
+  publisher={Elsevier}
+}
+
+@inproceedings{walker1960enumerative,
+  title={An enumerative technique for a class of combinatorial problems},
+  author={Walker, Robert J},
+  booktitle={Proceedings of Symposia in Applied Mathematics},
+  volume={10},
+  pages={91--94},
+  year={1960}
+}
+
+@article{knuth1975estimating,
+  title={Estimating the efficiency of backtrack programs},
+  author={Knuth, Donald E},
+  journal={Mathematics of computation},
+  volume={29},
+  number={129},
+  pages={122--136},
+  year={1975}
+}
+
+@article{lifschitz1983note,
+  title={A note on the complexity of a partition algorithm},
+  author={Lifschitz, Vladimir and Pesotchinsky, Leon},
+  journal={Information processing letters},
+  volume={17},
+  number={3},
+  pages={117--120},
+  year={1983},
+  publisher={Elsevier}
+}
+
+@article{lifschitz1980efficiency,
+  title={The efficiency of an algorithm of integer programming: a probabilistic analysis},
+  author={Lifschitz, Vladimir},
+  journal={Proceedings of the American Mathematical Society},
+  pages={72--76},
+  year={1980},
+  publisher={JSTOR}
+}
+
+@inproceedings{cheeseman1991really,
+  title={Where the really hard problems are},
+  author={Cheeseman, Peter and Kanefsky, Bob and Taylor, William},
+  booktitle={Proceedings of IJCAI},
+  volume={91},
+  pages={163--169},
+  year={1991}
+}
+
+@article{wilf1984backtrack,
+  title={Backtrack: an O (1) expected time algorithm for the graph coloring problem},
+  author={Wilf, Herbert S},
+  journal={Information Processing Letters},
+  volume={18},
+  number={3},
+  pages={119--121},
+  year={1984},
+  publisher={Elsevier}
+}
+
+@article{posa1976hamiltonian,
+  title={Hamiltonian circuits in random graphs},
+  author={P{\'o}sa, L},
+  journal={Discrete Mathematics},
+  volume={14},
+  number={4},
+  pages={359--364},
+  year={1976},
+  publisher={Elsevier}
+}
+
+@article{johnson1984np11,
+  title={The NP-completeness column: an ongoing guide},
+  author={Johnson, David S},
+  journal={Journal of Algorithms},
+  volume={5},
+  number={2},
+  pages={284--299},
+  year={1984},
+  publisher={Elsevier}
+}
+
+
+@article{purdom1983search,
+  title={Search rearrangement backtracking and polynomial average time},
+  author={Purdom Jr, Paul Walton},
+  journal={Artificial intelligence},
+  volume={21},
+  number={1},
+  pages={117--133},
+  year={1983},
   publisher={Elsevier}
 }
