long Qsort feito.

--- a/doc/relatorios/backbone-avrgcase-ssum/backbone-avrgcase-ssum.tex
+++ b/doc/relatorios/backbone-avrgcase-ssum/backbone-avrgcase-ssum.tex
@@ -2,7 +2,7 @@
 
 \usepackage{amsmath}
 
-\title{Estimating the efficiency of backtrack procedures for nonnegative integer programming problems}
+\title{Estimating the efficiency of backtrack procedures for nonnegative binary programming problems}
 \author{Marcos Daniel Baroni}
 
 % 1: Introduction (and Motivation)
