dados de resultados kpbt.

--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -677,3 +677,15 @@ masid = {694811}
   year={1983},
   publisher={Elsevier}
 }
+
+
+@article{lueker1998average,
+  title={Average-case analysis of off-line and on-line knapsack problems},
+  author={Lueker, George S},
+  journal={Journal of Algorithms},
+  volume={29},
+  number={2},
+  pages={277--305},
+  year={1998},
+  publisher={Elsevier}
+}
