--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -689,3 +689,41 @@ masid = {694811}
   year={1998},
   publisher={Elsevier}
 }
+
+@inproceedings{beier2003random,
+  title={Random knapsack in expected polynomial time},
+  author={Beier, Rene and V{\"o}cking, Berthold},
+  booktitle={Proceedings of the thirty-fifth annual ACM symposium on Theory of computing},
+  pages={232--241},
+  year={2003},
+  organization={ACM}
+}
+
+@article{nemhauser1969discrete,
+  title={Discrete dynamic programming and capital allocation},
+  author={Nemhauser, George L and Ullmann, Zev},
+  journal={Management Science},
+  volume={15},
+  number={9},
+  pages={494--505},
+  year={1969},
+  publisher={INFORMS}
+}
+
+@book{horowitz1978fundamentals,
+  title={Fundamentals of computer algorithms},
+  author={Horowitz, Ellis and Sahni, Sartaj},
+  year={1978},
+  publisher={Computer Science Press}
+}
+
+@article{weingartner1967methods,
+  title={Methods for the solution of the multidimensional 0/1 knapsack problem},
+  author={Weingartner, H Martin and Ness, David N},
+  journal={Operations Research},
+  volume={15},
+  number={1},
+  pages={83--103},
+  year={1967},
+  publisher={INFORMS}
+}
