--- a/doc/relatorios/report-20141119-kp-backtrack/report.tex
+++ b/doc/relatorios/report-20141119-kp-backtrack/report.tex
@@ -77,8 +77,8 @@ For simplicity assume that no two subsets have the same profit.
 Then no subset dominated by another subset can be an optimal solution to the knapsack problem, regardless of the specified knapsack capacity.
 Consequently, it suffices to consider those sets that are not dominated by any other set.
 
-Using this concept Nemhauser and Ullmann~\cite{nemhauser1969discrete} introduce an elegant
-algorithm computing a list of all dominating sets in an iterative manner:
+Using this concept Nemhauser and Ullmann~\cite{nemhauser1969discrete} introduced an elegant
+algorithm (Algorithm~\ref{alg:nu}) computing a list of all dominating sets in an iterative manner.
 
 \begin{algorithm}[H]
  \SetKwInOut{Input}{Input}
@@ -91,6 +91,7 @@ algorithm computing a list of all dominating sets in an iterative manner:
    $S(i) \leftarrow \big\{ dominates\big(s, S'(i)\big) \,\big|\, s \in S'(i) \big\}$\;
  }
  \caption{The Nemhauser-Ullmann Algorithm}
+ \label{alg:nu}
 \end{algorithm}
 
 Let $S(i)$ be the sequence of dominating subsets over the items $1, \ldots, i$.
@@ -100,8 +101,9 @@ First duplicate all subsets in $S(i-1)$ and then add item $i$ to each of the dup
 Now we compute $S(i)$ by removing the sets dominated by any other set (line 4).
 The $dominates(s, S)$ procedure checks if subset $s$ dominates all others subsets in $S$.
 The result is the ordered sequence $S(i)$ of dominating sets over the items $1, \ldots, i$.
+This algorithm can be viewed as a sparse dynamic programming approach.
 
-Beier and V{\"o}cking \cite{beier2003random}...
+Considering this algorithm Beier and V{\"o}cking~\cite{beier2003random}
 
 \bibliographystyle{abbrv}
 \bibliography{../../refs}
