feito graficos experimentais.

--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -727,3 +727,12 @@ masid = {694811}
   year={1967},
   publisher={INFORMS}
 }
+
+@inproceedings{walker1960enumerative,
+  title={An enumerative technique for a class of combinatorial problems},
+  author={Walker, Robert J},
+  booktitle={Proceedings of Symposia in Applied Mathematics},
+  volume={10},
+  pages={91--94},
+  year={1960}
+}
